--- a/style.css
+++ b/style.css
@@ -4,14 +4,15 @@
     /* Debug */
 
 
+/* サイト内共通部 */
 html{
     background-color: lightpink
 }
 
 
 body{
-    margin: 0;
-    width: 1000 px;
+    margin: 0 auto;
+    width: 100%;
     
 }
 
@@ -20,16 +21,18 @@ h2{
     margin: 0;
     animation: SlideIn 1.6s;
 }
-@keyframes SlideIn {
+/* @keyframes SlideIn {
     0% {
-      opacity: 0;/*初期状態では透明に*/
-      transform: translateX(64px);
+    opacity: 0;
+    transform: translateX(64px);
     }
     100% {
-      opacity: 1;
-      transform: translateX(0);
+    opacity: 1;
+    transform: translateX(0);
     }
-}
+}  */
+
+
 
 /* ヘッダー */
 header{
@@ -38,13 +41,14 @@ header{
     /*layout*/
     position:fixed;
     top: 0;
+    left: 0;
     z-index:10000 ;
     /*style*/
     background-color: brown;
     color: azure;
 }
 #headerDiv{
-    width: 1200px;
+    width: 100%;
     margin: auto;
     display: flex;
     flex-direction: row;
@@ -56,24 +60,22 @@ h1{
     margin: 10px;
 }
 
-nav{
+#header_nav{
     height: 70px;
-    width: 100%;
-    margin: 0 auto;
+    width: 70%;
+    margin: 0 0 0 0;
     /*style*/
     /* background-color: white;
     color: black; */
-
 }
 
-#headersnav{
+#header_nav_list{
     height: 70px;
-    margin: 0 auto;
+    margin: 0 0 0 0;
     display: flex;
     flex-direction: row;
     list-style: none;
     margin: 0;
-    
 }
 
 li{
@@ -86,16 +88,13 @@ li{
     
     /*style*/
     font-size: 20px;
-    
     /* Debug */
     /* padding: 10px 20px; */
+    background-color: brown;
     color: #3e3d3c;
     border-bottom: 5px solid transparent;
     border: black;
-
 }
-
-
 li:hover{
     background-color: rgb(187, 107, 107);
     color: aliceblue;
@@ -103,6 +102,7 @@ li:hover{
     border-bottom: 5px solid transparent;
     border-color: azure;
 }
+
 
 
 a.navlist{
@@ -114,9 +114,46 @@ a.navlist{
     color: azure;
 }
 
+#hamburger_menu{
+    height: 70px;
+    margin: 0;
+    /* display: none; */
+    z-index:10001 ;
+}
+#sidemenu{
+    position: absolute;
+    display: none;
+}
+.close_sidemenu{
+    position: absolute;
+    display: none;
+}
+.hamburger_icon{
+    display: none;
+    height: 60px;
+    margin: 0 0 0 0;
+    padding-bottom: 10px;
+    font-size: 60px;
+    font-weight: 80;
+}
+/* ヘッダー　終了 */
+
+/* フッター */
+footer{
+    width: 100%;
+    height: 300px;
+    background-color: brown;
+    margin: 0 auto;
+
+}
+/* フッター　終了 */
+/* サイト内共通部　終了 */
+
+
+
+
+/* ページ別 */
 /* トップイメージ */
-
-
 #TopImageBox{
     width: 1000px ;
     height: 400px;
@@ -128,6 +165,8 @@ a.navlist{
     width: 100%;
     height: 400Px;
 }
+/* トップイメージ　終了 */
+
 
 /* ■メインコンテンツ■ */
 main{
@@ -155,11 +194,18 @@ main{
     /* margin-left: 20px; */
 }
 
+.home_h2{
+    font-size: 70px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    border-bottom: 5px solid transparent;
+    border-color: azure;
+}
+
 
 /* ポートフォリオ */
-#portfolio_box{
+.portfolio_box{
     width: 1000px;
-    height: 400px;
+    height: 500px;
     margin: 0 auto;
     padding: 0;
     position: relative;
@@ -167,21 +213,30 @@ main{
 }
 
 #portfolio_listing_box{
+    width: 900px;
+    height: 340px;
     display: flex;
     flex-direction: row;
+    -webkit-justify-content: space-between; /* Safari */
+    justify-content:         space-between;
+
+    position : absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+
 }
 
-.portfolio{
-
-}
-
-/* フッター */
-footer{
-    width: 100%;
+.portfolio_card{
+    width: 250px;
     height: 300px;
-    background-color: brown;
-    margin: 0 auto;
+    margin: 20px 0;
+    background-color: bisque;
+
 }
+
+
 
 
 
@@ -210,3 +265,70 @@ footer{
     color: aliceblue;
     border-color: azure;
 }
+
+/* JS関数向けCSS */
+
+/* ■スライドイン■ */
+.scroll-fade-side{
+    opacity: 0;
+    transition-duration: 1000ms;
+    transition-property: opacity, transform;
+}
+
+.sideIn_up   {transform: translate(  0px,  70px);}
+.sideIn_down {transform: translate(  0px, -70px);}
+.sideIn_right{transform: translate( 70px,   0px);}
+.sideIn_left {transform: translate(-70px,   0px);}
+
+.scroll-in{
+    opacity: 1;
+    transform: translate(0, 0);
+}
+/* ■スライドイン終了■ */
+
+
+/* ■レスポンシブ　スマホ向けサイト■ */
+@media screen and (max-width: 700px) { 
+
+    #header_nav_list{
+        display: inline;
+        width: 100%;
+        position: absolute;
+        top: -300px;
+        left: 0;
+    }
+    .hamburger_icon{
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0px;
+    }
+    input[type="checkbox"]:checked ~ #header_nav_list{
+        width: 100%;
+        top: 70px;
+        
+    }
+
+    input[type="checkbox"]:checked ~ .hamburger_icon{
+        display: none;
+    }
+
+    input[type="checkbox"]:checked ~ .back_sidemenu{
+        position: fixed;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background-color: rgba(0,0,0,0.6);
+    }
+    input[type="checkbox"]:checked ~ .close_sidemenu{
+        display: block;
+        position: fixed;
+        top: 0;
+        right: 0;
+        font-size: 50px;
+        z-index:10005 ;
+
+    }
+
+}
+/* ■レスポンシブ　スマホ向けサイト 終了■ */
