--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ html{
 body{
     margin: 0 auto;
     width: 100%;
-    
 }
 
 h2{
@@ -35,6 +34,7 @@ h2{
 
 
 /* ヘッダー */
+
 header{
     height: 70px;
     width: 100%;
@@ -48,7 +48,7 @@ header{
     color: azure;
 }
 #headerDiv{
-    width: 100%;
+    max-width: 100%;
     margin: auto;
     display: flex;
     flex-direction: row;
@@ -57,8 +57,11 @@ header{
 
 
 h1{
-    margin: 10px;
+    text-align: center;
+    line-height: 70px;
+    margin: 0;
 }
+
 
 #header_nav{
     height: 70px;
@@ -102,9 +105,6 @@ li:hover{
     border-bottom: 5px solid transparent;
     border-color: azure;
 }
-
-
-
 a.navlist{
     display: block;
     height: 20px;
@@ -131,11 +131,69 @@ a.navlist{
 .hamburger_icon{
     display: none;
     height: 60px;
+    width: auto;
     margin: 0 0 0 0;
     padding-bottom: 10px;
     font-size: 60px;
     font-weight: 80;
 }
+@media screen and (max-width: 500px) {
+    header{
+        height: 70px;
+        width: 100%;
+
+    }
+    #headerDiv{
+        width: 100%;
+    }
+    h1{
+        font-size: 30px;
+        line-height: 70px;
+        padding-left: 5px;
+    }
+    #header_nav{
+        width: 0px;
+    }
+
+    #header_nav_list{
+        display: inline;
+        width: 100%;
+        position: absolute;
+        top: -300px;
+        left: 0px;
+    }
+    .hamburger_icon{
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 50px;
+    }
+    input[type="checkbox"]:checked ~ #header_nav_list{
+        width: 100%;
+        top: 70px;
+        left: 0px;
+        
+    }
+    input[type="checkbox"]:checked ~ .hamburger_icon{
+        display: none;
+    }
+    input[type="checkbox"]:checked ~ .back_sidemenu{
+        position: fixed;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background-color: rgba(0,0,0,0.6);
+    }
+    input[type="checkbox"]:checked ~ .close_sidemenu{
+        display: block;
+        position: fixed;
+        top: 0;
+        right: 0;
+        font-size: 50px;
+        z-index:10005 ;
+    }
+}
+
 /* ヘッダー　終了 */
 
 /* フッター */
@@ -164,6 +222,20 @@ footer{
 #TopImage{
     width: 100%;
     height: 400Px;
+}
+@media screen and (max-width: 500px) { 
+    #TopImageBox{
+        width: 100% ;
+        height: auto;
+        margin: 0 0;
+        margin-top: 70px;
+        padding: 0;
+        background-color: white;
+    }
+    #TopImage{
+        width: 100%;
+        height: auto;
+    }
 }
 /* トップイメージ　終了 */
 
@@ -200,6 +272,31 @@ main{
     border-bottom: 5px solid transparent;
     border-color: azure;
 }
+@media screen and (max-width: 500px) { 
+    main{
+        width: 100%;
+        margin: 0;
+        background-color: white;
+    }
+    
+    #onboarding1{
+        flex-direction: column;
+    }
+    
+    .onboarding_photo{
+        width: 80%;
+        height: auto;
+        margin: 0 auto;
+    }
+    
+    .onboarding_textbox{
+        padding-left: 20px;
+    }
+    .onboarding_text{
+        /* margin-left: 20px; */
+    }
+    
+}
 
 
 /* ポートフォリオ */
@@ -233,12 +330,7 @@ main{
     height: 300px;
     margin: 20px 0;
     background-color: bisque;
-
 }
-
-
-
-
 
 .roundButton{
 
@@ -266,6 +358,33 @@ main{
     border-color: azure;
 }
 
+@media screen and (max-width: 500px){
+    .portfolio_box{
+        width: 100%;
+        height: 1130px;
+    }
+    #portfolio_listing_box{
+        display: block;
+        width: 100%;
+        height: 1000px;
+    }
+    
+    .portfolio_card{
+        width: 250px;
+        height: 300px;
+        margin: 20px auto;
+        background-color: bisque;
+    }
+    .roundButton{
+        width: 80%;
+        font-size: 18px;
+        text-align: center;
+    }
+}
+
+
+
+
 /* JS関数向けCSS */
 
 /* ■スライドイン■ */
@@ -288,47 +407,5 @@ main{
 
 
 /* ■レスポンシブ　スマホ向けサイト■ */
-@media screen and (max-width: 700px) { 
 
-    #header_nav_list{
-        display: inline;
-        width: 100%;
-        position: absolute;
-        top: -300px;
-        left: 0;
-    }
-    .hamburger_icon{
-        display: block;
-        position: absolute;
-        top: 0;
-        right: 0px;
-    }
-    input[type="checkbox"]:checked ~ #header_nav_list{
-        width: 100%;
-        top: 70px;
-        
-    }
-
-    input[type="checkbox"]:checked ~ .hamburger_icon{
-        display: none;
-    }
-
-    input[type="checkbox"]:checked ~ .back_sidemenu{
-        position: fixed;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        background-color: rgba(0,0,0,0.6);
-    }
-    input[type="checkbox"]:checked ~ .close_sidemenu{
-        display: block;
-        position: fixed;
-        top: 0;
-        right: 0;
-        font-size: 50px;
-        z-index:10005 ;
-
-    }
-
-}
 /* ■レスポンシブ　スマホ向けサイト 終了■ */
